Improve image captions in README
Updated image captions for film, anime, and series interfaces.

--- a/README
+++ b/README
@@ -56,11 +56,11 @@ Seuls les utilisateurs connectés peuvent ajouter des favoris et gérer leur pro
 ![Services](accueil.png)
 
 ### Inteface pour les films 
-![Services](Interface_film.png)
+![Interface pour les films](Interface_film.png)
 ### Interface pour les animes 
-![Services](Interface_Anime.png)
+![Interface pour les animes](Interface_Anime.png)
 ### Interface pour les series 
-![Services](Interface_Series.png)
+![Interface pour les series](Interface_Series.png)
 
 ### Ajouter aux favoris / Authentification
 ![Formulaire](login.png)
