Update image captions to include 'Flixora'

--- a/README
+++ b/README
@@ -53,28 +53,28 @@ Seuls les utilisateurs connectés peuvent ajouter des favoris et gérer leur pro
 ## 🖼️ Aperçu du site
 
 ### Page d’accueil
-![Aperçu page d'accueil](accueil.png)
+![Flixora](accueil.png)
 
 ### Inteface pour les films 
-![Interface films](Interface_film.png)
+![Flixora](Interface_film.png)
 ### Interface pour les animes 
-![Interface animes](Interface_Anime.png)
+![Flixora](Interface_Anime.png)
 ### Interface pour les series 
-![Interface series](Interface_Series.png)
+![Flixora](Interface_Series.png)
 
 ### Ajouter aux favoris / Authentification
-![Formulaire login](login.png)
-![Formulaire register](register.png)
+![Flixora](login.png)
+![Flixora](register.png)
 
 ### Lecture d’un film
-![Lecture film 1](1.png)
-![Lecture film 2](2.png)
+![Flixora](1.png)
+![Flixora](2.png)
 
 ### Profile
-![profile](profile.png)
+![Flixora](profile.png)
 
 ### Historique 
-![historique](historique.png)
+![Flixora](historique.png)
 
 ---
 
