Change image references in README
Updated image references in README from 'Flixora' to 'movies'.

--- a/README
+++ b/README
@@ -53,28 +53,28 @@ Seuls les utilisateurs connectés peuvent ajouter des favoris et gérer leur pro
 ## 🖼️ Aperçu du site
 
 ### Page d’accueil
-![Flixora](accueil.png)
+![movies](accueil.png)
 
 ### Inteface pour les films 
-![Flixora](Interface_film.png)
+![movies](Interface_film.png)
 ### Interface pour les animes 
-![Flixora](Interface_Anime.png)
+![movies](Interface_Anime.png)
 ### Interface pour les series 
-![Flixora](Interface_Series.png)
+![movies](Interface_Series.png)
 
 ### Ajouter aux favoris / Authentification
-![Flixora](login.png)
-![Flixora](register.png)
+![movies](login.png)
+![movies](register.png)
 
 ### Lecture d’un film
-![Flixora](1.png)
-![Flixora](2.png)
+![movies](1.png)
+![movies](2.png)
 
 ### Profile
-![Flixora](profile.png)
+![movies](profile.png)
 
 ### Historique 
-![Flixora](historique.png)
+![movies](historique.png)
 
 ---
 
